<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content">
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="wrap_content">
<TextView style="@style/heading" android:text="@string/help_heading" />
<TextView style="@style/about_textbox" android:text="@string/help_intro"/>
<TextView style="@style/about_textbox" android:text="@string/help_intro_main"/>
<TextView style="@style/about_textbox" android:text="@string/help_main_to"/>
<TextView style="@style/about_textbox" android:text="@string/help_main_message"/>
<TextView style="@style/about_textbox" android:text="@string/help_main_button_exit"/>
<TextView style="@style/about_textbox" android:text="@string/help_main_button_clear"/>
<TextView style="@style/about_textbox" android:text="@string/help_main_button_send"/>
<TextView style="@style/about_textbox" android:text="@string/help_intro_settings"/>
<TextView style="@style/about_textbox" android:autoLink="none" android:text="@string/help_settings_username"/>
<TextView style="@style/about_textbox" android:text="@string/help_settings_password"/>
<TextView style="@style/about_textbox" android:text="@string/help_settings_subid"/>
<TextView style="@style/about_textbox" android:text="@string/help_settings_fixphone_checkbox_text"/>
<TextView style="@style/about_textbox" android:text="@string/help_settings_button_cancel"/>
<TextView style="@style/about_textbox" android:text="@string/help_settings_button_save"/>
 </LinearLayout>
 </ScrollView>
