<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="fill_parent">
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="wrap_content">
<TextView style="@style/heading" android:text="@string/main_heading" />
<LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent" android:layout_weight="0" android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center_vertical"
        android:paddingRight="3dip"
        android:text="@string/to_label"/>
    <EditText
    android:id="@+id/to_textbox"
        android:layout_width="1dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:phoneNumber="true"/>


</LinearLayout>

<LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
<Button android:layout_height="wrap_content" android:text="@string/button_add_contact" android:layout_width="fill_parent" android:id="@+id/add_contact_button">
</Button>
</LinearLayout><LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="wrap_content">
     <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:text="@string/message_label"/>
        <EditText
    android:id="@+id/message_textbox"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="" 
        android:gravity="top"
        android:scrollbarStyle="insideInset"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>
        <TextView
    	android:id="@+id/message_textcount"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
		android:paddingBottom="10dip"
		android:textColor="#00ff00"
		android:text="160 left"/>
		
</LinearLayout>
<TableLayout
	android:layout_width="fill_parent"
	android:layout_gravity="bottom" android:layout_height="wrap_content">
	<TableRow>
	<Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_exit" android:layout_weight="1"/>
	<Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" android:layout_weight="1"/>
	<Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send" 
        android:layout_weight="1"
        android:layout_gravity="bottom" />
	</TableRow>
</TableLayout>

</LinearLayout>
</ScrollView>
